Compiler/src/main/java/Testing/Tests/SemanticTests/SymbolTable/failing/invalidVariable.ru
/? Descripción: caso de prueba que verifica que si se vuelve a definir
/? un parametro como variable dentro de un método
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 10 | COLUMNA 15 | EL IDENTIFICADOR YA ESTA DECLARADO EN LOS PARAMETROS


struct A{}
impl A{
.(Char a){Int a;}}
start{}}